@@ -12,7 +12,6 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
@@ -49,8 +48,8 @@ public class SwitchTaskMapper implements TaskMapper {
     }
 
     @Override
-    public TaskType getTaskType() {
-        return TaskType.SWITCH;
+    public String getTaskType() {
+        return TaskType.SWITCH.name();
     }
 
     /**
@@ -87,14 +86,31 @@ public class SwitchTaskMapper implements TaskMapper {
             LOGGER.error(errorMsg);
             throw new TerminateWorkflowException(errorMsg);
         }
-        String evalResult = "" + evaluator.evaluate(workflowTask.getExpression(), taskInput);
+
+        String evalResult = "";
+        try {
+            evalResult = "" + evaluator.evaluate(workflowTask.getExpression(), taskInput);
+        } catch (Exception exception) {
+            TaskModel switchTask = taskMapperContext.createTaskModel();
+            switchTask.setTaskType(TaskType.TASK_TYPE_SWITCH);
+            switchTask.setTaskDefName(TaskType.TASK_TYPE_SWITCH);
+            switchTask.getInputData().putAll(taskInput);
+            switchTask.setStartTime(System.currentTimeMillis());
+            switchTask.setStatus(TaskModel.Status.FAILED);
+            switchTask.setReasonForIncompletion(exception.getMessage());
+            tasksToBeScheduled.add(switchTask);
+
+            return tasksToBeScheduled;
+        }
 
         // QQ why is the case value and the caseValue passed and caseOutput passes as the same ??
         TaskModel switchTask = taskMapperContext.createTaskModel();
         switchTask.setTaskType(TaskType.TASK_TYPE_SWITCH);
         switchTask.setTaskDefName(TaskType.TASK_TYPE_SWITCH);
+        switchTask.getInputData().putAll(taskInput);
         switchTask.getInputData().put("case", evalResult);
-        switchTask.getOutputData().put("evaluationResult", Collections.singletonList(evalResult));
+        switchTask.addOutput("evaluationResult", List.of(evalResult));
+        switchTask.addOutput("selectedCase", evalResult);
         switchTask.setStartTime(System.currentTimeMillis());
         switchTask.setStatus(TaskModel.Status.IN_PROGRESS);
         tasksToBeScheduled.add(switchTask);
